--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <app-skills></app-skills>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
