--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,12 +4,12 @@
       <div class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a href="#" class="navbar-brand">MyWebSite</a>
+            <a routerLink="/me" class="navbar-brand">MyWebSite</a>
           </div>
           <ul class="nav navbar-nav">
-            <li><a href="#">Me</a></li>
-            <li><a href="#">Cv</a></li>
-            <li><a href="#">Contact</a></li>
+            <li routerLinkActive="active"><a routerLink="/me">Me</a></li>
+            <li routerLinkActive="active"><a routerLink="/cv/skills">Cv</a></li>
+            <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
           </ul>
         </div>
       </div>
