--- a/src/app/cv/skills/skills.component.html
+++ b/src/app/cv/skills/skills.component.html
@@ -1,4 +1,8 @@
 <div align="center"> <h3 style="font-size:30px"> Skills </h3>
+<div><h3 style="font-size:30px">
+  {{skillType}}
+  </h3>
+</div>
     <li
     class="list-group-item box"
     [@animateList]
@@ -11,7 +15,9 @@
       <i  class="fa fa-cog fa-spin" ></i>
         <b id="noteName">{{skill.name}}</b>
         <i>
-          <i *ngFor="let number of [0,1,2,3,4]; let i = index" class="fa note" [notationFont] = "skill.note" [index] = "i"></i>
+          <i *ngIf="skill.type == 0 || skill.type == 1">
+            <i *ngFor="let number of [0,1,2,3,4]; let i = index" class="fa note" [notationFont] = "skill.note" [index] = "i"></i>
+          </i>
         </i>
       <div *ngIf="skill.detail !=  '' &&  skill.showDetail">
         {{skill.detail}}
